--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,13 +18,11 @@
   <li><a href="{{ site.baseurl }}/research.html">research</a></li>
   {% endif %}
   
-  <!--
-  {% if page.active == "teaching" %}
-  <li><a class="active" href="{{ site.baseurl }}/teaching.html">teaching</a></li>
+  {% if page.active == "join" %}
+  <li><a class="active" href="{{ site.baseurl }}/join.html">join</a></li>
   {% else %}
-  <li><a href="{{ site.baseurl }}/teaching.html">teaching</a></li>
+  <li><a href="{{ site.baseurl }}/join.html">join</a></li>
   {% endif %}
-  -->
     
   {% if page.active == "publications" %}
   <li><a class="active" href="{{ site.baseurl }}/publications.html">papers</a></li>
@@ -35,6 +33,9 @@
 </ul>
 
 <ul id="corner" class="logo">
+  <!---
+  <li><a href="{{ site.baseurl }}/index.html"><img src="files/logo_transparent.png" style="height: 16px;"> Huang Lab@MSU</a></li>
+  --->
   <li><a href="{{ site.baseurl }}/index.html">Huang Lab@MSU</a></li>
 </ul>
 
