--- a/css/minimal.css
+++ b/css/minimal.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:300italic,700italic,300,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 @import url(https://fonts.googleapis.com/css?family=Short+Stack);
 
@@ -6,7 +7,7 @@ html {
 }
 
 body {
-  font: 16px Lato, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 16px Ubuntu, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: black;
   font-weight: 300;
   line-height: 20px;
@@ -28,7 +29,7 @@ a:hover {
 
 ul.logo {
   position: fixed;
-  width: 160px;
+  width: 200px;
   font-size: 20px;
   background-color: #18453b;
   color: #fff;
@@ -93,7 +94,7 @@ ul.nav {
 
 ul.nav li {
   display: inline-block;
-  width: calc((100% - 160px)/4.1);
+  width: calc((100% - 200px)/5.1);
 }
 
 ul.nav li a {
