--- a/css/minimal.css
+++ b/css/minimal.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font: 16px Ubuntu, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 16px Avenir, Ubuntu, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: black;
   font-weight: 300;
   line-height: 20px;
