--- a/css/minimal.css
+++ b/css/minimal.css
@@ -1,13 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300italic,700italic,300,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 @import url(https://fonts.googleapis.com/css?family=Short+Stack);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700);
 
 html {
     overflow-y:scroll;
 }
 
 body {
-  font: 16px Avenir, Ubuntu, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 16px Avenir, "Titillium Web", Ubuntu, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: black;
   font-weight: 300;
   line-height: 20px;
