--- a/css/minimal.css
+++ b/css/minimal.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font: 16px Avenir, "Titillium Web", Ubuntu, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 15px "Titillium Web", Avenir, Ubuntu, Lato, "Lucida Grande", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: black;
   font-weight: 300;
   line-height: 20px;
@@ -31,7 +31,7 @@ a:hover {
 ul.logo {
   position: fixed;
   width: 200px;
-  font-size: 20px;
+  font-size: 18px;
   background-color: #18453b;
   color: #fff;
   text-align: right;
@@ -56,7 +56,7 @@ ul.logo li {
 ul.icon {
   position: fixed;
   width: 200px;
-  font-size: 20px;
+  font-size: 18px;
   background-color: #18453b;
   color: #fff;
   text-align: right;
@@ -82,7 +82,7 @@ ul.icon li {
 ul.nav {
   position: fixed;
   background-color: #18453b;
-  font-size: 20px;
+  font-size: 18px;
   color: #fff;
   text-align: center;
   line-height: 40px;
